--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,8 @@
     "                [f\"{_} wk ahead inc case\" for _ in range(1, 5)]\n",
     "\n",
     "MODELS_TO_EXCLUDE = ['COVIDhub-ensemble', 'COVIDhub-trained_ensemble', \n",
-    "                     'CU-nochange', 'CU-scenario_high', 'CU-scenario_low', 'CU-scenario_mid']\n",
+    "                     'CU-nochange', 'CU-scenario_high', 'CU-scenario_low', 'CU-scenario_mid',\n",
+    "                     'KITmetricslab-select_ensemble']\n",
     "\n",
     "LOCATIONS_TO_EXCLUDE = [\"11\", \"60\", \"66\", \"69\", \"72\", \"74\", \"78\"]\n",
     "\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,24 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00ab4eeb1eb240f29cd51f310ef8f15b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Load test data:   0%|          | 0/51 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df_test = load_test_data(df_files, '2021-06-14', VALID_TARGETS, LOCATIONS_TO_EXCLUDE)"
    ]
@@ -211,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_train_data(files, test_date, valid_targets, locations_to_exclude, window_size = 4, online = False):\n",
     "    test_date = pd.to_datetime(test_date)\n",
     "    lower_bound = test_date - pd.Timedelta(weeks = window_size) - pd.Timedelta(weeks=(window_size - 1))\n",
-    "    df_train_files = files[(files.timezero >= lower_bound) & (df_files.timezero < test_date)].copy()\n",
+    "    df_train_files = files[(files.timezero >= lower_bound) & (files.timezero < test_date)].copy()\n",
     "    \n",
     "    forecast_dates_by_horizon = get_forecast_dates_by_horizon(test_date, window_size)\n",
     "    df_train_files['horizons'] = df_train_files.timezero.apply(get_relevant_horizons, \n",
@@ -278,31 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a25ebbca036e4593a6462f2e3079f314",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Load train data:   0%|          | 0/404 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df_train = load_train_data(df_files, '2021-06-14', VALID_TARGETS, LOCATIONS_TO_EXCLUDE, 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,59 +296,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Load test data:\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f85f0e60c5741d98b6e9f95a80823fd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/51 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Load train data:\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8c7a6ed36bc4f06a39d317d5c1b6507",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/404 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df_train, df_test = load_train_test('2021-06-14', VALID_TARGETS, LOCATIONS_TO_EXCLUDE, MODELS_TO_EXCLUDE, 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,34 +314,65 @@
     "        print(test_date)\n",
     "        df_train, df_test = load_train_test(test_date, valid_targets, locations_to_exclude, models_to_exclude, \n",
     "                                            window_size, online)\n",
-    "        df_train.to_csv(f'data/{test_date}_df_train.csv', index=False)\n",
-    "        df_test.to_csv(f'data/{test_date}_df_test.csv', index=False)"
+    "        df_train.to_csv(f'data/{test_date.date()}_train.csv', index=False)\n",
+    "        df_test.to_csv(f'data/{test_date.date()}_test.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "# compute_train_test_sets(['2021-06-07', '2021-06-14'], VALID_TARGETS, LOCATIONS_TO_EXCLUDE, MODELS_TO_EXCLUDE, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dates = pd.date_range('2021-05-17', '2021-08-09', freq='W-MON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-07\n",
-      "Load test data:\n"
+      "2021-05-17 00:00:00\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "277e5765e8e743e19fc27eff3a51b2c2",
+       "model_id": "bfc1723d221149bc8ed115299e39f1ce",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/54 [00:00<?, ?it/s]"
+       "Load test data:   0%|          | 0/58 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8199e622b904791abc67b8d8f30e701",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/416 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -423,18 +382,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Load train data:\n"
+      "2021-05-24 00:00:00\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1759c794788042c8aab3985ba8b759d1",
+       "model_id": "f83612a5a95242e5bb355987eaa8a1d8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/412 [00:00<?, ?it/s]"
+       "Load test data:   0%|          | 0/55 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "173e136e6b0b4143ab2a80faac036397",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/413 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -444,19 +417,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-14\n",
-      "Load test data:\n"
+      "2021-05-31 00:00:00\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e40dc3a96c7e4d3cbfc4746e7a400a6b",
+       "model_id": "ad3dca5736c04fb5be32f739007417cb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/51 [00:00<?, ?it/s]"
+       "Load test data:   0%|          | 0/55 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a942da20378749c58c2fa501db8740bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/407 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -466,18 +452,347 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Load train data:\n"
+      "2021-06-07 00:00:00\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70082960a8a744a4bbb817d12a97e459",
+       "model_id": "0b376f31d6e74953a3fbb13d6f2c8a23",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/404 [00:00<?, ?it/s]"
+       "Load test data:   0%|          | 0/53 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c2f530b1a9c40f99549973c2a08b416",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/405 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-14 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b9f63ab619045c0addc6941b6218196",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e5436fb51184e4c9230fc8a56a379af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/397 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-21 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e70b9e7fb6b6412f8edc0dd56ba07223",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/53 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51fb47907bf047088d321f3b7c7c426a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/387 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-28 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09595f3100344ccc8a4ad988a26599fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "074ff4daab2b4de4bb2d2e5bf2f60183",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/384 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-07-05 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "20a622b149b64b3ca79226d66ba1ace3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/52 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03482d318cb04e1c9bd60ccef2a4e631",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/374 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-07-12 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33b81416f7ef4f6089788855b9b544fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cf74d6972f6648b49d42927247577af3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/368 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-07-19 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3dc1358804b4f5ebf26ad6c3a82b00f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05e11c2372494fb298a3f0f3fbcbcc26",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/363 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-07-26 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ccff3b4a5924a45b6b862052e70b3c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/53 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09172258dab44f7b9548bb59d04db2a8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/358 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-02 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91bc6f3c5f494cbe9d3a4cb2e8598ece",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9bb071298d54e8fa93743ce19b2d1c3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/358 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-09 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac07e3ca050649b0b2badf85f0c125ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load test data:   0%|          | 0/49 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e81c98960af94a58ac51c4e855ebf182",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Load train data:   0%|          | 0/353 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -485,8 +800,15 @@
     }
    ],
    "source": [
-    "compute_train_test_sets(['2021-06-07', '2021-06-14'], VALID_TARGETS, LOCATIONS_TO_EXCLUDE, MODELS_TO_EXCLUDE, 4)"
+    "compute_train_test_sets(test_dates, VALID_TARGETS, LOCATIONS_TO_EXCLUDE, MODELS_TO_EXCLUDE, 4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
